refactor/#54: 신고 상세 조회 성능 최적화(메모리 필터링 제거)